--- a/FFT.ipynb
+++ b/FFT.ipynb
@@ -23,14 +23,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据形状: (32, 1000, 49)\n"
+      "data shape: (32, 1000, 49)\n"
      ]
     }
    ],
    "source": [
     "\n",
     "data = scipy.io.loadmat('ftt-data.mat')['data']  \n",
-    "print(\"数据形状:\", data.shape)  \n",
+    "print(\"data shape:\", data.shape)  \n",
     "\n",
     "\n",
     "fs = 500  \n",
@@ -55,7 +55,7 @@
     "    25: 'C3 ',\n",
     "    28: 'FC5'\n",
     "}\n",
-    "# 5. 准备存储结构\n",
+    "# 5. Prepare the storage structure\n",
     "band_signals = {band: np.zeros((len(selected_channels), n_timepoints)) \n",
     "                for band in freq_bands}\n",
     "original_signals = np.zeros((len(selected_channels), n_timepoints))\n"
