--- a/dSPM.ipynb
+++ b/dSPM.ipynb
@@ -16,20 +16,17 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "# 1. 加载MATLAB数据\n",
+    "# 1. load MATLAB data\n",
     "mat_data = scipy.io.loadmat('name.mat')\n",
-    "eeg_data = mat_data['data']  # 获取32×1000×300的矩阵\n",
-    "# 在加载数据后添加转置操作\n",
-    "eeg_data = np.transpose(eeg_data, (2, 0, 1))  # 从(32,1000,300)变为(300,32,1000)\n",
+    "eeg_data = mat_data['data']",
+    "eeg_data = np.transpose(eeg_data, (2, 0, 1)) ",
     "\n",
-    "# 打印数据形状以确认\n",
-    "print(f\"数据形状: {eeg_data.shape} (通道×时间点×试次)\")\n",
+    "print(f\"data shape: {eeg_data.shape} (channel×timepoints×trails)\")\n",
     "\n",
-    "# 2. 创建MNE数据结构\n",
-    "sfreq = 500  # 采样率(Hz)，根据实际设置调整\n",
-    "tmin = 0   # 刺激前起点(秒)，根据实验设置调整\n",
+    "# 2. Create the MNE data structure\n",
+    "sfreq = 500  ",
+    "tmin = 0  ",
     "\n",
-    "# EEGLAB标准1005系统的32通道名称\n",
     "ch_names = [\n",
     "    'Fp1', 'Fp2', \n",
     "    'AF3', 'AF4', \n",
@@ -42,23 +39,23 @@
     "    'O1', 'Oz', 'O2'\n",
     "]\n",
     "    \n",
-    "# 创建标准电极位置 - 使用1005系统蒙太奇\n",
+    "# Create standard electrode positions - using the 1005 system montage\n",
     "\n",
     "montage = mne.channels.make_standard_montage('standard_1005')\n",
     "info = mne.create_info(ch_names=ch_names, sfreq=sfreq, ch_types='eeg')\n",
     "\n",
-    "# 检查montage中的通道是否与info匹配\n",
+    "# Check whether the channels in montage match the info\n",
     "montage_ch_names = set(montage.ch_names)\n",
     "info_ch_names = set(info.ch_names)\n",
     "info.set_montage(montage)\n",
     "\n",
-    "# 3. 创建Epochs对象\n",
+    "# 3. Create an Epochs object\n",
     "n_epochs = eeg_data.shape[0]\n",
     "events = np.zeros((n_epochs, 3), dtype=int)\n",
-    "events[:, 0] = np.arange(n_epochs) * (eeg_data.shape[1] + 100)  # 确保事件间隔足够\n",
-    "events[:, 2] = 1  # 所有事件类型设为1\n",
+    "events[:, 0] = np.arange(n_epochs) * (eeg_data.shape[1] + 100)\n",
+    "events[:, 2] = 1\n",
     "\n",
-    "# 创建EpochsArray\n",
+    "# create EpochsArray\n",
     "epochs = mne.EpochsArray(\n",
     "    data=eeg_data,\n",
     "    info=info,\n",
@@ -66,21 +63,17 @@
     "    tmin=tmin,\n",
     "    event_id={'condition': 1},\n",
     "    baseline=(-0.2, 0) if tmin <= -0.2 else None,\n",
-    "    proj=False  # 暂时不使用投影\n",
+    "    proj=False\n",
     ")\n",
-    "# 设置平均参考投影器\n",
     "epochs.set_eeg_reference(ref_channels='average', projection=True)\n",
     "\n",
-    "# 激活并应用投影器\n",
     "epochs.apply_proj()\n",
     "\n",
-    "# 验证投影器已生效\n",
-    "print(\"\\n激活的投影器:\", [p for p in epochs.info[\"projs\"] if p[\"active\"]])\n",
+    "print(\"\\nActivated projector:\", [p for p in epochs.info[\"projs\"] if p[\"active\"]])\n",
     "\n",
-    "# 打印最终通道信息\n",
-    "print(\"\\n最终通道信息:\")\n",
-    "print(f\"数据中的通道数: {epochs.info['nchan']}\")\n",
-    "print(f\"通道名称: {epochs.info['ch_names']}\")"
+    "print(\"\\nFinal channel information:\")\n",
+    "print(f\"The number of channels in the data: {epochs.info['nchan']}\")\n",
+    "print(f\"channel name: {epochs.info['ch_names']}\")"
    ]
   },
   {
@@ -99,16 +92,15 @@
     "from mne.minimum_norm import make_inverse_operator, apply_inverse\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 1. 加载MATLAB数据\n",
+    "# 1. load MATLABdata\n",
     "mat_data = scipy.io.loadmat('name.mat')\n",
-    "eeg_data = mat_data['data']  # 获取32×1000×300的矩阵\n",
-    "eeg_data = np.transpose(eeg_data, (2, 0, 1))  # 从(32,1000,300)变为(300,32,1000)\n",
+    "eeg_data = mat_data['data']\n",
+    "eeg_data = np.transpose(eeg_data, (2, 0, 1))\n",
     "\n",
-    "# 2. 创建MNE数据结构\n",
-    "sfreq = 500  # 采样率(Hz)\n",
-    "tmin = 0     # 刺激前起点(秒)\n",
+    "# 2. Create the MNE data structure\n",
+    "sfreq = 500 \n",
+    "tmin = 0 \n",
     "\n",
-    "# 标准64通道名称 (国际10-20系统)\n",
     "ch_names_64 = [\n",
     "    'Fp1', 'Fpz', 'Fp2', \n",
     "    'AF7', 'AF3', 'AFz', 'AF4', 'AF8',\n",
@@ -121,7 +113,6 @@
     "    'O1', 'Oz', 'O2', 'Iz'\n",
     "]\n",
     "\n",
-    "# 原始32通道名称\n",
     "ch_names_32 = [\n",
     "    'Fp1', 'Fp2', \n",
     "    'AF3', 'AF4', \n",
@@ -134,28 +125,27 @@
     "    'O1', 'Oz', 'O2'\n",
     "]\n",
     "\n",
-    "# 创建64通道数据数组\n",
+    "# Create a 64-channel data array\n",
     "n_epochs, n_channels_32, n_times = eeg_data.shape\n",
     "eeg_data_64 = np.zeros((n_epochs, len(ch_names_64), n_times))\n",
     "\n",
-    "# 将32通道数据映射到64通道中的对应位置\n",
+    "# Map the 32-channel data to the corresponding position in the 64-channel\n",
     "for i, ch in enumerate(ch_names_32):\n",
     "    if ch in ch_names_64:\n",
     "        idx_64 = ch_names_64.index(ch)\n",
     "        eeg_data_64[:, idx_64, :] = eeg_data[:, i, :]\n",
     "\n",
-    "# 创建标准电极位置 - 使用1005系统蒙太奇\n",
     "montage = mne.channels.make_standard_montage('standard_1005')\n",
     "info = mne.create_info(ch_names=ch_names_64, sfreq=sfreq, ch_types='eeg')\n",
     "info.set_montage(montage)\n",
     "\n",
-    "# 3. 创建Epochs对象\n",
+    "# 3. Create an Epochs object\n",
     "n_epochs = eeg_data_64.shape[0]\n",
     "events = np.zeros((n_epochs, 3), dtype=int)\n",
-    "events[:, 0] = np.arange(n_epochs) * (eeg_data_64.shape[2] + 100)  # 确保事件间隔足够\n",
-    "events[:, 2] = 1  # 所有事件类型设为1\n",
+    "events[:, 0] = np.arange(n_epochs) * (eeg_data_64.shape[2] + 100) \n",
+    "events[:, 2] = 1 \n",
     "\n",
-    "# 创建EpochsArray\n",
+    "# create EpochsArray\n",
     "epochs = mne.EpochsArray(\n",
     "    data=eeg_data_64,\n",
     "    info=info,\n",
@@ -166,25 +156,21 @@
     "    proj=False\n",
     ")\n",
     "\n",
-    "# 设置平均参考投影器\n",
     "epochs.set_eeg_reference(ref_channels='average', projection=True)\n",
     "epochs.apply_proj()\n",
-    "\n",
-    "# 打印通道信息\n",
     "print(\"\\n最终通道信息:\")\n",
     "print(f\"数据通道数: {epochs.info['nchan']}\")\n",
     "print(f\"通道名称: {epochs.info['ch_names']}\")\n",
     "\n",
-    "# 4. 获取模板大脑文件\n",
+    "# 4. Get the template brain file\n",
     "fs_dir = fetch_fsaverage(verbose=True)\n",
     "subjects_dir = fs_dir.parent\n",
     "subject = 'fsaverage'\n",
     "\n",
-    "# 确保已获取fsaverage路径\n",
     "subjects_dir = fetch_fsaverage(verbose=True).parent\n",
     "mne.datasets.fetch_fsaverage(subjects_dir)\n",
     "\n",
-    "# 5. 创建正向模型 (使用模板)\n",
+    "# 5. Create a forward model (using a template)\n",
     "src = mne.setup_source_space(\n",
     "    subject, \n",
     "    spacing='ico4',\n",
@@ -192,8 +178,8 @@
     "    add_dist=False\n",
     ")\n",
     "\n",
-    "# 三层电导率模型\n",
-    "conductivity = (0.3, 0.006, 0.3)  # 大脑/颅骨/头皮\n",
+    "# Three-layer conductivity model\n",
+    "conductivity = (0.3, 0.006, 0.3)\n",
     "model = mne.make_bem_model(\n",
     "    subject=subject,\n",
     "    ico=4,\n",
@@ -202,10 +188,9 @@
     ")\n",
     "bem = mne.make_bem_solution(model)\n",
     "\n",
-    "# 创建坐标变换\n",
     "trans = mne.read_trans(f'{subjects_dir}/fsaverage/bem/fsaverage-trans.fif')\n",
     "\n",
-    "# 创建正向解\n",
+    "# Create a positive solution\n",
     "fwd = mne.make_forward_solution(\n",
     "    epochs.info,\n",
     "    trans=trans,\n",
@@ -216,24 +201,22 @@
     "    n_jobs=1\n",
     ")\n",
     "\n",
-    "# 6. 计算噪声协方差\n",
+    "# 6. Calculate the noise covariance\n",
     "noise_cov = mne.compute_covariance(\n",
     "    epochs,\n",
-    "    tmin=tmin,      # 使用整个基线期\n",
+    "    tmin=tmin, \n",
     "    tmax=0.0,\n",
     "    method='shrunk'\n",
     ")\n",
     "\n",
-    "# 7. 创建逆算子\n",
+    "# 7. Create the inverse operator\n",
     "inv = make_inverse_operator(epochs.info, fwd, noise_cov)\n",
     "\n",
-    "# 8. 应用dSPM源定位\n",
-    "# 选择第一个试次作为示例\n",
+    "# 8. Apply dSPM source localization\n",
     "epoch = epochs[0]\n",
     "stc = apply_inverse(epoch, inv, method='dSPM')\n",
     "\n",
-    "# 9. 可视化源定位结果\n",
-    "# 在fsaverage大脑上绘制源激活\n",
+    "# 9. Visualize the source location results\n",
     "brain = stc.plot(subject='fsaverage', subjects_dir=subjects_dir, \n",
     "                hemi='both', views='lateral', time_viewer=True)\n",
     "brain.add_annotation('aparc', borders=True)\n",
@@ -251,7 +234,7 @@
    "outputs": [],
    "source": [
     "epochs.plot_sensors(show_names=True, kind='topomap', \n",
-    "                   title='EEG电极定位 (standard_1005)',\n",
+    "                   title='EEG channel location (standard_1005)',\n",
     "                   ch_groups='position',\n",
     "                   \n",
     "                   show=True)\n",
@@ -267,15 +250,14 @@
    "source": [
     "\n",
     "\n",
-    "# 3. 获取模板大脑文件\n",
+    "# 3. Get the template brain file\n",
     "fs_dir = fetch_fsaverage(verbose=True)\n",
     "subjects_dir = fs_dir.parent\n",
     "subject = 'fsaverage'\n",
     "\n",
     "\n",
-    "# 确保已获取fsaverage路径（关键步骤）\n",
-    "subjects_dir = fetch_fsaverage(verbose=True).parent  # 获取自动下载的模板路径\n",
-    "mne.datasets.fetch_fsaverage(subjects_dir)  # 确认模板存在\n"
+    "subjects_dir = fetch_fsaverage(verbose=True).parent\n",
+    "mne.datasets.fetch_fsaverage(subjects_dir)\n"
    ]
   },
   {
@@ -287,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "# 4. 创建正向模型 (使用模板)\n",
+    "# 4.Create a forward model (using a template)\n",
     "src = mne.setup_source_space(\n",
     "    subject, \n",
     "    spacing='ico4',\n",
@@ -295,7 +277,7 @@
     "    add_dist=False\n",
     ")\n",
     "\n",
-    "#conductivity = (0.3,)  # 单层模型\n",
+    "#conductivity = (0.3,)\n",
     "conductivity = (0.3, 0.006, 0.3)\n",
     "model = mne.make_bem_model(\n",
     "    subject=subject,\n",
@@ -305,7 +287,6 @@
     ")\n",
     "bem = mne.make_bem_solution(model)\n",
     "\n",
-    "# 创建坐标变换 (模板到标准空间)\n",
     "#trans = mne.read_trans(f'{fs_dir}/fsaverage-trans.fif')\n",
     "trans = mne.read_trans(f'C:/Users/39397/mne_data/MNE-fsaverage-data/fsaverage/bem/fsaverage-trans.fif')\n",
     "\n",
@@ -320,15 +301,15 @@
     "    n_jobs=1\n",
     ")\n",
     "\n",
-    "# 5. 计算噪声协方差\n",
+    "# 5. Calculate the noise covariance\n",
     "noise_cov = mne.compute_covariance(\n",
     "    epochs,\n",
-    "    tmin=tmin,      # 使用整个基线期\n",
+    "    tmin=tmin,\n",
     "    tmax=0.0,\n",
     "    method='shrunk'\n",
     ")\n",
     "\n",
-    "# 6. 创建逆算子\n",
+    "# 6. Create the inverse operator\n",
     "inv = make_inverse_operator(\n",
     "    info,\n",
     "    fwd,\n",
@@ -337,7 +318,7 @@
     "    depth=0.8\n",
     ")\n",
     "\n",
-    "# 7. 应用dSPM到平均诱发电位\n",
+    "# 7.Apply dSPM to the mean evoked potential\n",
     "evoked = epochs.average()\n",
     "stc = apply_inverse(\n",
     "    evoked,\n",
@@ -358,23 +339,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8. 可视化结果\n",
-    "# 激活大脑图\n",
+    "# 8. Visualization result\n",
     "brain = stc.plot(\n",
     "    subjects_dir=subjects_dir,\n",
     "    subject=subject,\n",
     "    hemi='both',\n",
-    "    initial_time=0.1,  # 显示100ms时刻\n",
+    "    initial_time=0.1,\n",
     "    clim=dict(kind='percent', lims=[90, 95, 99]),\n",
     "    views=['lateral', 'medial'],\n",
     "    size=(800, 600)\n",
     ")\n",
-    "\n",
-    "# 保存结果\n",
     "stc.save('dSPM_source_estimate', overwrite=True)\n",
     "brain.save_image('source_activation.png', overwrite=True)\n",
     "\n",
-    "# 时间序列图\n",
     "plt.figure(figsize=(10, 6))\n",
     "stc.plot()\n",
     "plt.title('dSPM Source Time Course')\n",
