--- a/dSPM.ipynb
+++ b/dSPM.ipynb
@@ -158,9 +158,9 @@
     "\n",
     "epochs.set_eeg_reference(ref_channels='average', projection=True)\n",
     "epochs.apply_proj()\n",
-    "print(\"\\n最终通道信息:\")\n",
-    "print(f\"数据通道数: {epochs.info['nchan']}\")\n",
-    "print(f\"通道名称: {epochs.info['ch_names']}\")\n",
+    "print(\"\\nfinal channel info:\")\n",
+    "print(f\"channel numbers: {epochs.info['nchan']}\")\n",
+    "print(f\"channel names: {epochs.info['ch_names']}\")\n",
     "\n",
     "# 4. Get the template brain file\n",
     "fs_dir = fetch_fsaverage(verbose=True)\n",
